Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/B2B_Product_Resources__c.object-meta.xml
<CustomObject>
    <label>B2B Product Resources</label>
    <nameField>
        <displayFormat>BPR-{0000000}</displayFormat>
        <label>B2B Product Resources Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Product Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>