Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>