Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/fields/Gated__c.field-meta.xml
<CustomField>
    <fullName>Gated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gated</label>
    <type>Checkbox</type>
</CustomField>