Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/fields/Link_ID__c.field-meta.xml
<CustomField>
    <fullName>Link_ID__c</fullName>
    <label>Link ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>