Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/fields/Meta_Description__c.field-meta.xml
<CustomField>
    <fullName>Meta_Description__c</fullName>
    <label>Meta Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>