Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/fields/Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Page_Title__c</fullName>
    <label>Page Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>