Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/fields/PDF_Name__c.field-meta.xml
<CustomField>
    <fullName>PDF_Name__c</fullName>
    <label>PDF Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>