Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/fields/PDF_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>PDF_Resource_Type__c</fullName>
    <label>PDF Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical Resources</fullName>
            </value>
            <value>
                <fullName>Business Insights</fullName>
            </value>
            <value>
                <fullName>Customer Story</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>