Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/fields/PDG__c.field-meta.xml
<CustomField>
    <fullName>PDG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDG</label>
    <type>Checkbox</type>
</CustomField>