Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/fields/Popular_Download__c.field-meta.xml
<CustomField>
    <fullName>Popular_Download__c</fullName>
    <label>Popular Download</label>
    <length>255</length>
    <type>Text</type>
</CustomField>