Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>B2B Product Resources</relationshipLabel>
    <relationshipName>B2B_Product_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>