Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/fields/Research_Areas__c.field-meta.xml
<CustomField>
    <fullName>Research_Areas__c</fullName>
    <label>Research Areas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>