Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <label>Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PI - Product Image</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>All Resources</fullName>
            </value>
            <value>
                <fullName>Infographic</fullName>
            </value>
            <value>
                <fullName>Brief</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Technical Note</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Application Note</fullName>
            </value>
            <value>
                <fullName>Calendar</fullName>
            </value>
            <value>
                <fullName>Article</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Brochure</fullName>
            </value>
            <value>
                <fullName>White Paper</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Video Talk</fullName>
            </value>
            <value>
                <fullName>Application Brief</fullName>
            </value>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Webinar Resources</fullName>
            </value>
            <value>
                <fullName>Case Chemicals Testing Solutions</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Webinars</fullName>
            </value>
            <value>
                <fullName>Whitepaper</fullName>
            </value>
            <value>
                <fullName>Flyer</fullName>
            </value>
            <value>
                <fullName>Podcast</fullName>
            </value>
            <value>
                <fullName>Workflow Solutions</fullName>
            </value>
            <value>
                <fullName>FAQ</fullName>
            </value>
            <value>
                <fullName>Slideshow</fullName>
            </value>
            <value>
                <fullName>Chart &amp; Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>