Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/fields/SAI__c.field-meta.xml
<CustomField>
    <fullName>SAI__c</fullName>
    <label>SAI</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>