Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/fields/Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Subtitle__c</fullName>
    <label>Subtitle</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>