Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>