Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>