Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/fields/Translations__c.field-meta.xml
<CustomField>
    <fullName>Translations__c</fullName>
    <label>Translations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>