Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>