Perkin-UAT/force-app/main/default/objects/B2B_Product_Resources__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>Country__c</columns>
    <columns>Date__c</columns>
    <columns>Gated__c</columns>
    <columns>Label__c</columns>
    <columns>Language__c</columns>
    <columns>Link_ID__c</columns>
    <columns>Part_Number__c</columns>
    <columns>PDF_Resource_Type__c</columns>
    <columns>Resource_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>